// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Header should NOT render the configurable component if version is too low 1`] = `
<div
  class="css-gmuwbf"
>
  <div
    class="css-1j99xrl"
  >
    <img
      alt="Logo"
      class="chakra-image css-kl8a02"
      src="/logo.svg"
    />
    <p
      class="chakra-text css-mwent8"
    >
      Choose a Provider
    </p>
  </div>
</div>
`;

exports[`Component: Header should render the configurable component if version is old enough 1`] = `
<div
  class="chakra-stack css-184jys2"
>
  <h2
    class="chakra-heading css-0"
  >
    Connect to Test App
  </h2>
  <div
    class="chakra-stack css-84zodg"
  >
    <img
      alt="Logo"
      class="chakra-image css-dqjekp"
      src="test.png"
    />
    <p
      class="chakra-text css-mwent8"
    >
      www.onflow.org
    </p>
  </div>
</div>
`;

exports[`Component: Header should show the DeveloperMessage if config is missing 1`] = `
<div
  class="chakra-stack css-184jys2"
>
  <h2
    class="chakra-heading css-0"
  >
    Connect
  </h2>
  <div
    class="chakra-stack css-84zodg"
  >
    <p
      class="chakra-text css-mwent8"
    >
      Unknown
    </p>
  </div>
</div>
`;
